testsuite/tests/hidden_includes/hidden_stays_hidden.ocamlc.reference
File "libc/c4.ml", line 3, characters 8-11:
3 | let y = A.x + 1
            ^^^
Error: Unbound module "A"
